// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PhotoUpload => Ui Container 1`] = `
.c0 {
  padding: 30px 20px 10px 20px;
}

<div
  className="c0"
/>
`;

exports[`PhotoUpload => Ui DashedContainer 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: dashed 2px;
  width: calc(25% - 20px);
  height: 150px;
  margin: 20px 20px 0 0;
}

.c0 input {
  visibility: hidden;
  width: 0;
}

.c0 img {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.c0:hover {
  cursor: default;
}

<div
  className="c0"
/>
`;

exports[`PhotoUpload => Ui DashedContainer withHover 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: dashed 2px;
  width: calc(25% - 20px);
  height: 150px;
  margin: 20px 20px 0 0;
}

.c0 input {
  visibility: hidden;
  width: 0;
}

.c0 img {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.c0:hover {
  cursor: pointer;
}

<div
  className="c0"
/>
`;

exports[`PhotoUpload => Ui Icon 1`] = `
.c0 {
  font-size: 40px;
}

<FontAwesomeIcon
  border={false}
  className="c0"
  fixedWidth={false}
  flip={null}
  icon={null}
  inverse={false}
  listItem={false}
  mask={null}
  pull={null}
  pulse={false}
  rotation={null}
  size={null}
  spin={false}
  symbol={false}
  title=""
  transform={null}
/>
`;

exports[`PhotoUpload => Ui Label 1`] = `
.c0 {
  font-size: 14px;
}

<label
  className="c0"
/>
`;
